force-app/main/default/objects/IntegrationMessage__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integration Messages</relationshipLabel>
    <relationshipName>IntegrationMessages</relationshipName>
    <type>Lookup</type>
</CustomField>