force-app/main/default/objects/IntegrationMessage__c/fields/ProductRef__c.field-meta.xml
<CustomField>
    <fullName>ProductRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Integration Messages</relationshipLabel>
    <relationshipName>IntegrationMessages</relationshipName>
    <type>Lookup</type>
</CustomField>