force-app/main/default/objects/IntegrationMessage__c/fields/RequestMsg__c.field-meta.xml
<CustomField>
    <fullName>RequestMsg__c</fullName>
    <label>Request Msg</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>