force-app/main/default/objects/IntegrationMessage__c/fields/ResponseMsg__c.field-meta.xml
<CustomField>
    <fullName>ResponseMsg__c</fullName>
    <label>Response Msg</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>