force-app/main/default/objects/IntegrationMessage__c/fields/SalesforceRecord__c.field-meta.xml
<CustomField>
    <fullName>SalesforceRecord__c</fullName>
    <externalId>true</externalId>
    <label>Salesforce Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>