force-app/main/default/objects/IntegrationMessage__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <label>SAP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>