force-app/main/default/objects/IntegrationMessage__c/fields/StatusAuto__c.field-meta.xml
<CustomField>
    <fullName>StatusAuto__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Success&quot;), &quot;🆗&quot;, &quot;❌&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>