force-app/main/default/objects/IntegrationMessage__c/listViews/BW001.listView-meta.xml
<ListView>
    <fullName>BW001</fullName>
    <columns>NAME</columns>
    <columns>StatusAuto__c</columns>
    <columns>Status__c</columns>
    <columns>Direction__c</columns>
    <columns>Endpoint__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Endpoint__c</field>
        <operation>contains</operation>
        <value>actualSalesHistoryCalloutBW</value>
    </filters>
    <label>[BW001] Actual_Sales_History</label>
</ListView>