force-app/main/default/objects/IntegrationMessage__c/listViews/BW002.listView-meta.xml
<ListView>
    <fullName>BW002</fullName>
    <columns>NAME</columns>
    <columns>StatusAuto__c</columns>
    <columns>Status__c</columns>
    <columns>Direction__c</columns>
    <columns>Endpoint__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Endpoint__c</field>
        <operation>contains</operation>
        <value>actualTAMCalloutBW</value>
    </filters>
    <label>[BW002] Informe TAM</label>
</ListView>