force-app/main/default/objects/IntegrationMessage__c/listViews/SAP001.listView-meta.xml
<ListView>
    <fullName>SAP001</fullName>
    <columns>NAME</columns>
    <columns>StatusAuto__c</columns>
    <columns>Status__c</columns>
    <columns>AccountRef__c</columns>
    <columns>SAP_Code__c</columns>
    <columns>Direction__c</columns>
    <columns>Endpoint__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Endpoint__c</field>
        <operation>contains</operation>
        <value>upsertCustomerInSf</value>
    </filters>
    <label>[SAP001] Account</label>
</ListView>