force-app/main/default/objects/IntegrationMessage__c/listViews/SAP002_Account_Products.listView-meta.xml
<ListView>
    <fullName>SAP002_Account_Products</fullName>
    <columns>AccountRef__c</columns>
    <columns>NAME</columns>
    <columns>StatusAuto__c</columns>
    <columns>Status__c</columns>
    <columns>SAP_Code__c</columns>
    <columns>Direction__c</columns>
    <columns>Endpoint__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Endpoint__c</field>
        <operation>contains</operation>
        <value>insertCustomerPriceInSf</value>
    </filters>
    <label>[SAP002] Account Products</label>
</ListView>